tests/errors/undefined_fn_suggestion.wyn
fn main() -> int {
    var s = "hello"
    prnt(s)
    return 0
}
